# happstack-skeleton

./: README.md  skeleton.cabal
src/View/: Template.hs  Views.hs
template/hamlet/: home.hamlet
