name:                skeleton
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/MortimerMcMire315/happstack-skeleton#readme
license:             GPL-3
license-file:        LICENSE
author:              Seth A. Yoder
maintainer:          seth.a.yoder@gmail.com
copyright:           2016 Seth A. Yoder
category:            Web
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.23

library
  hs-source-dirs:      src
  exposed-modules:     Server

  other-modules:       Routes
                     , View.ContentTypes
                     , View.Views
                     , View.Template
                     , View.TemplateUtil

  build-depends:       base >= 4.7 && < 5
                     , blaze-html >= 0.8 && < 0.9
                     , exceptions >= 0.8 && < 0.9
                     , happstack-clientsession >= 7.0
                     , happstack-server >= 7.0 && < 8.0
                     , shakespeare >= 2.0.11 && < 3
  default-language:    Haskell2010

custom-setup
    setup-depends:     base
                     , Cabal
                     , process >= 1.4
                     , directory >= 1.3

executable skeleton
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , skeleton
  default-language:    Haskell2010

test-suite skeleton-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sparkive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MortimerMcMire315/happstack-skeleton
